manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-frontend-ingress
  namespace: event
  annotations:
    alb.ingress.kubernetes.io/group.name: event-management
    alb.ingress.kubernetes.io/group.order: "10"

    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'

    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-api-ingress
  namespace: event
  annotations:
    alb.ingress.kubernetes.io/group.name: event-management
    alb.ingress.kubernetes.io/group.order: "20"

    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'

    alb.ingress.kubernetes.io/healthcheck-path: /health/live
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 3001
          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: event-svc
                port:
                  number: 3002
          - path: /api/bookings
            pathType: Prefix
            backend:
              service:
                name: booking-svc
                port:
                  number: 3003
